[project]
name = "rl-utils"
version = "0.1.0"
description = "Utilities for reinforcement learning experiments"
authors = [
    { name = "Daniel Pietz", email = "danieljpietz@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch~=2.2.2",
    "gym~=0.26.2",
    "numpy~=1.26.4",
    "matplotlib~=3.9.4"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
